[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
warp = { version = "0.3.7", features = ["tls"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
