[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rumqttc = "0.24.0"
tokio = { version = "1.37.0", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_millis = "0.1.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
